[package]
name = "TreeD"
version = "0.1.0"
authors = ["Jacob Williams <jwilliams@carlsonsw.com>", "Julian Ruiseco <jruiseco@carlsonsw.com>",]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://github.com/rust-lang/rust/issues/62447
#[lib]
#name = "volumetric_query_engine"
#crate-type = ["cdylib"]
[lib]
name = "ncollidTrimeshIO"
path = "src/lib.rs"

#[[bin]]
#name = "ncollidTrimeshIO"
#path = "src/bin.rs"

[dependencies]
approx   = "0.3"
alga     = "0.9"
nalgebra = "0.23"
ncollide3d = "0.26.1"
stl_io = "0.5.2"
csv = "1.1.3"
rayon = "1.5.0"
assert_approx_eq = "1.1.0"
serde_derive = "1.0.117"
serde_json = "1.0.59"
js-sys = "0.3.45"
num-bigint = "0.2"
num-traits = "0.2"

